--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="cell.js"></script>
     <script src="player.js"></script>
     <link rel="stylesheet" href="./style.css" type="text/css" media="all" />
-    <title>Circles</title>
+    <title>Maze</title>
 </head>
 <body>
     <div class="container">
